src/objects/Contract_Products__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>HYPERLINK( Service_Contract__r.AccountId ,  Service_Contract__r.Account.Name , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>text(Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Contract_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Contract Products</relationshipLabel>
        <relationshipName>Contract_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Product</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Contract Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>